--- a/dev/pages/services.pug
+++ b/dev/pages/services.pug
@@ -24,17 +24,20 @@ block pageMain
 							{
 								class: 'dark',
 								title: 'Аудит хозяйств',
-								img: 'audit'
+								img: 'audit',
+								href: 'audit'
 							},
 							{
 								class: 'middle',
 								title: 'Расчет рациона',
-								img: 'diet'
+								img: 'diet',
+								href: 'diet'
 							},
 							{
 								class: 'light',
 								title: 'Лабораторные исследования',
-								img: 'lab'
+								img: 'lab',
+								href: 'lab'
 							}
 						]
 					)
