--- a/dev/blocks/page/page.scss
+++ b/dev/blocks/page/page.scss
@@ -9,7 +9,6 @@
 	min-height: 100%;
 	position: relative;
 	&__header {
-		background: #4671a2;
 		flex: 0 0 auto;
 		position: fixed;
 		transition: background .25s ease;
@@ -23,6 +22,9 @@
 			background: #fff;
 			box-shadow: 0 0 16px rgba(0,0,0,.25);
 		}
+	}
+	.mfp-bg.mfp-fade.mfp-ready ~ & &__header {
+		padding-right: 17px;
 	}
 	&__main {
 		flex: 1 0 auto;
@@ -90,5 +92,10 @@
 			@include page-paragraph-secondary;
 			margin-top: 18px;
 		}
+	}
+	&__button {
+		margin-top: 32px;
+		padding-left: 32px;
+		padding-right: 32px;
 	}
 }
