--- a/dev/blocks/sidenav/sidenav.scss
+++ b/dev/blocks/sidenav/sidenav.scss
@@ -25,13 +25,11 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		height: 60%;
-		margin-top: auto;
-		min-height: 360px;
+		min-height: 100%;
 	}
 	&__phones {
 		display: flex;
-		margin: auto 0 64px;
+		margin: 32px 0;
 	}
 	&__links {
 		display: flex;
