~ side menu fix

--- a/dev/blocks/nav/nav.scss
+++ b/dev/blocks/nav/nav.scss
@@ -4,7 +4,9 @@
 
 .nav {
 	display: flex;
-	height: 19px;
+	@media (min-width: $screen-md) {
+		height: 19px;
+	}
 	&_sidenav {
 		display: grid;
 		grid-gap: 24px;
