--- a/dev/pages/audit.pug
+++ b/dev/pages/audit.pug
@@ -12,7 +12,7 @@ block pageMain
 		'Аудит хозяйств',
 		true,
 		[
-			{active: false, link: 'Аудит хозяйств', url: '/audit.html'},
+			{active: true, link: 'Аудит хозяйств', url: '/audit.html'},
 			{active: false, link: 'Расчет рациона', url: '/diet.html'},
 			{active: false, link: 'Лабораторные исследования', url: '/lab.html'}
 		]
