--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -9,10 +9,9 @@ block pageMain
 		true,
 		[
 			{active: true, link: 'Вся продукция', url: '#'},
-			{active: false, link: 'Корма для выращивания телят', url: '#'},
-			{active: false, link: 'Корма для здоровья коров', url: '#'},
-			{active: false, link: 'Корма для повышения удоев', url: '#'},
-			{active: false, link: 'Премиксы', url: '#'}
+			{active: false, link: 'Для повышения удоев', url: '#'},
+			{active: false, link: 'Для здоровья коров', url: '#'},
+			{active: false, link: 'Для выращивания телят', url: '#'}
 		]
 	)
 	section.section
