--- a/dev/pages/services.pug
+++ b/dev/pages/services.pug
@@ -6,14 +6,7 @@ block pageHeader
 block pageMain
 	+subheader(
 		'Услуги',
-		true,
-		[
-			{active: false, link: 'О нас', url: '/about.html#about'},
-			{active: false, link: 'Консультационные услуги', url: '/about.html#services'},
-			{active: false, link: 'О производстве', url: '/about.html#prod'},
-			{active: false, link: 'О лаборатории', url: '/about.html#lab'},
-			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
-		]
+		false
 	)
 	section.section.section_pb
 		.grid
