--- a/dev/pug/layout__part_nav.pug
+++ b/dev/pug/layout__part_nav.pug
@@ -1,7 +1,7 @@
 .sidenav
 	.sidenav__scroll
 		.sidenav__inner
-			+nav(true)
+			+navSide()
 			.sidenav__phones
 				.phone-drop__img
 					svg.phone-drop__icon.svg
