--- a/dev/blocks/nav/nav.pug
+++ b/dev/blocks/nav/nav.pug
@@ -3,22 +3,55 @@
 mixin nav(isSide)
 	.nav(class= isSide ? 'nav_sidenav' : '')
 		.nav__item
-			.nav__link О компании
+			a.nav__link(href='/about.html') О компании
 				.nav__trigger
 					svg.nav__icon.svg
 						use(xlink:href='/img/svgSprite.svg#icon__triangle')
 			.nav__inner
 				.nav__drop
 					.nav__item
-						a.nav__link(href='/about.html') О нас
+						a.nav__link(href='/about.html#about') О нас
 					.nav__item
-						a.nav__link(href='/services.html') Услуги
+						a.nav__link(href='/about.html#services') Услуги
 					.nav__item
-						a.nav__link(href='/production.html') О производстве
+						a.nav__link(href='/about.html#prod') О производстве
 					.nav__item
-						a.nav__link(href='/lab.html') О лаборатории
+						a.nav__link(href='/about.html#lab') О лаборатории
 					.nav__item
-						a.nav__link(href='/vacancy.html') Вакансии
+						a.nav__link(href='/about.html#vacancy') Вакансии
+		.nav__item
+			a.nav__link(href='/production.html') Продукция
+				.nav__trigger
+					svg.nav__icon.svg
+						use(xlink:href='/img/svgSprite.svg#icon__triangle')
+			.nav__inner
+				.nav__drop
+					.nav__item
+						a.nav__link(href='/production-list.html') Для повышения удоев
+					.nav__item
+						a.nav__link(href='/production-list.html') Для здоровья коров
+					.nav__item
+						a.nav__link(href='/production-list.html') Для выращивания телят
+		.nav__item
+			a.nav__link(href='/services.html') Услуги
+				.nav__trigger
+					svg.nav__icon.svg
+						use(xlink:href='/img/svgSprite.svg#icon__triangle')
+			.nav__inner
+				.nav__drop
+					.nav__item
+						a.nav__link(href='/audit.html') Аудит хозяйств
+					.nav__item
+						a.nav__link(href='/diet.html') Расчет рациона
+					.nav__item
+						a.nav__link(href='/lab.html') Лабораторные исследования
+		.nav__item
+			a.nav__link(href='/contacts.html') Контакты
+
+mixin navSide
+	.nav.nav_sidenav
+		.nav__item
+			a.nav__link(href='/about.html') О компании
 		.nav__item
 			a.nav__link(href='/production.html') Продукция
 		.nav__item
