--- a/dev/blocks/sidenav/sidenav.scss
+++ b/dev/blocks/sidenav/sidenav.scss
@@ -21,15 +21,18 @@
 		overflow-y: auto;
 	}
 	&__inner {
-		align-items: flex-start;
+		align-items: center;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		min-height: 100%;
+		height: 80%;
+		margin-top: auto;
+		min-height: 360px;
 	}
 	&__phones {
 		display: flex;
-		margin: 32px 0;
+		margin: auto 0 40px;
+		width: 100%;
 	}
 	&__links {
 		display: flex;
