--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -13,7 +13,7 @@ block pageMain
 		true,
 		[
 			{active: false, link: 'О нас', url: '/about.html#about'},
-			{active: false, link: 'Консультационные услуги', url: '/about.html#services'},
+			{active: false, link: 'Услуги', url: '/about.html#services'},
 			{active: false, link: 'О производстве', url: '/about.html#prod'},
 			{active: false, link: 'О лаборатории', url: '/about.html#lab'},
 			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
