--- a/dev/pages/contacts.pug
+++ b/dev/pages/contacts.pug
@@ -4,17 +4,7 @@ block pageHeader
 	+header('Контакты')
 
 block pageMain
-	+subheader(
-		'О компании',
-		true,
-		[
-			{active: false, link: 'О нас', url: '/about.html#about'},
-			{active: false, link: 'Консультационные услуги', url: '/about.html#services'},
-			{active: false, link: 'О производстве', url: '/about.html#prod'},
-			{active: false, link: 'О лаборатории', url: '/about.html#lab'},
-			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
-		]
-	)
+	+subheader('Контакты', false)
 	section.contacts
 		.grid
 			.grid__row
