~ about page video section ~ reviews page

--- a/dev/blocks/nav/nav.pug
+++ b/dev/blocks/nav/nav.pug
@@ -46,6 +46,8 @@ mixin nav(isSide)
 					.nav__item
 						a.nav__link(href='/lab.html') Лабораторные исследования
 		.nav__item
+			a.nav__link(href='/reviews.html') Отзывы
+		.nav__item
 			a.nav__link(href='/contacts.html') Контакты
 
 mixin navSide
@@ -56,5 +58,7 @@ mixin navSide
 			a.nav__link(href='/production.html') Продукция
 		.nav__item
 			a.nav__link(href='/services.html') Услуги
+		.nav__item
+			a.nav__link(href='/reviews.html') Отзывы
 		.nav__item
 			a.nav__link(href='/contacts.html') Контакты
