--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -15,6 +15,7 @@ include ../blocks/points/points.pug
 include ../blocks/popup/popup.pug
 include ../blocks/prod-grid/prod-grid.pug
 include ../blocks/prod-tiles/prod-tiles.pug
+include ../blocks/reviews/reviews.pug
 include ../blocks/services-tiles/services-tiles.pug
 include ../blocks/subheader/subheader.pug
 include ../blocks/subnav/subnav.pug
