--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -39,6 +39,7 @@
 @import "dev/blocks/prod-tabs/prod-tabs.scss";
 @import "dev/blocks/prod-tabs-content/prod-tabs-content.scss";
 @import "dev/blocks/prod-tiles/prod-tiles.scss";
+@import "dev/blocks/reviews/reviews.scss";
 @import "dev/blocks/section/section.scss";
 @import "dev/blocks/select/select.scss";
 @import "dev/blocks/services-tiles/services-tiles.scss";
@@ -54,6 +55,7 @@
 @import "dev/blocks/vacancy-list/vacancy-list.scss";
 @import "dev/blocks/vacancy-list-tiles/vacancy-list-tiles.scss";
 @import "dev/blocks/vacancy-tiles/vacancy-tiles.scss";
+@import "dev/blocks/video/video.scss";
 @import "dev/blocks/welcome/welcome.scss";
 
 /*!*
