--- a/dev/blocks/nav/nav.pug
+++ b/dev/blocks/nav/nav.pug
@@ -6,7 +6,7 @@ mixin nav(isSide)
 			a.nav__link(href='/about.html') О компании
 				.nav__trigger
 					svg.nav__icon.svg
-						use(xlink:href='/img/svgSprite.svg#icon__triangle')
+						use(xlink:href='img/svgSprite.svg#icon__triangle')
 			.nav__inner
 				.nav__drop
 					.nav__item
@@ -23,7 +23,7 @@ mixin nav(isSide)
 			a.nav__link(href='/production.html') Продукция
 				.nav__trigger
 					svg.nav__icon.svg
-						use(xlink:href='/img/svgSprite.svg#icon__triangle')
+						use(xlink:href='img/svgSprite.svg#icon__triangle')
 			.nav__inner
 				.nav__drop
 					.nav__item
@@ -36,7 +36,7 @@ mixin nav(isSide)
 			a.nav__link(href='/services.html') Услуги
 				.nav__trigger
 					svg.nav__icon.svg
-						use(xlink:href='/img/svgSprite.svg#icon__triangle')
+						use(xlink:href='img/svgSprite.svg#icon__triangle')
 			.nav__inner
 				.nav__drop
 					.nav__item
