--- a/dev/blocks/points/points.pug
+++ b/dev/blocks/points/points.pug
@@ -6,5 +6,5 @@ mixin points(items)
 			.points__item
 				.points__tile
 					svg.points__icon.svg
-						use(xlink:href='/img/svgSprite.svg#icon__' + item.icon)
+						use(xlink:href='img/svgSprite.svg#icon__' + item.icon)
 				.points__title!= item.title
