--- a/dev/blocks/services-tiles/services-tiles.pug
+++ b/dev/blocks/services-tiles/services-tiles.pug
@@ -9,4 +9,4 @@ mixin services-tiles(items)
 					span
 				.services-tiles__img
 					svg.svg
-						use(xlink:href='/img/svgSprite.svg#img__' + item.img)
+						use(xlink:href='img/svgSprite.svg#img__' + item.img)
