--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -32,11 +32,11 @@ block pageMain
 					.slider-wrap.slider-wrap_about
 						.slider.slider_about
 							.slider__slide
-								img(src='/img/img__slide_02.jpg', alt='')
+								img(src='img/img__slide_02.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_01.jpg', alt='')
+								img(src='img/img__slide_01.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_03.jpg', alt='')
+								img(src='img/img__slide_03.jpg', alt='')
 						.slider.slider_about_mini
 							.slider__slide
 								.slider__bubble
@@ -110,11 +110,11 @@ block pageMain
 					.slider-wrap
 						.slider.slider_production
 							.slider__slide
-								img(src='/img/img__slide_01.jpg', alt='')
+								img(src='img/img__slide_01.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_02.jpg', alt='')
+								img(src='img/img__slide_02.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_03.jpg', alt='')
+								img(src='img/img__slide_03.jpg', alt='')
 						.slider.slider_production_mini
 							.slider__slide
 								.slider__info
@@ -142,9 +142,9 @@ block pageMain
 					.slider-wrap.slider-wrap_lab
 						.slider.slider_lab
 							.slider__slide
-								img(src='/img/img__slide_04.jpg', alt='')
+								img(src='img/img__slide_04.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_05.jpg', alt='')
+								img(src='img/img__slide_05.jpg', alt='')
 						.slider.slider_lab_mini
 							.slider__slide
 								.slider__lab
@@ -158,7 +158,7 @@ block pageMain
 							.slider__slide
 								.slider__lab
 									svg.slider__lab-icon.svg
-										use(xlink:href='/img/svgSprite.svg#icon__comb')
+										use(xlink:href='img/svgSprite.svg#icon__comb')
 									.slider__lab-inner
 										.slider__lab-title Заголовок
 										ul.slider__lab-list
