--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -11,7 +11,7 @@ block pageMain
 		.grid.welcome__inner
 			.grid__row
 				.grid__col
-					img.welcome__img(src='/img/bg__welcome.jpg' alt='')
+					img.welcome__img(src='img/bg__welcome.jpg' alt='')
 					.welcome__info
 						h1.welcome__title Продажа кормов для сельскохоз животных
 						.welcome__descr Наши продукты позволяют оптимальным образом сбалансировать рацион, по питательным веществам, энергии и микроэлементам.
@@ -91,11 +91,11 @@ block pageMain
 					.slider-wrap
 						.slider.slider_company
 							.slider__slide
-								img(src='/img/img__slide_01.jpg', alt='')
+								img(src='img/img__slide_01.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_02.jpg', alt='')
+								img(src='img/img__slide_02.jpg', alt='')
 							.slider__slide
-								img(src='/img/img__slide_03.jpg', alt='')
+								img(src='img/img__slide_03.jpg', alt='')
 				.grid__col.grid__col_lg_5
 					.slider-side
 						h2.page__title.page__title_1 О компании
