--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -21,7 +21,7 @@ block pageMain
 					.prod
 						.prod__inner
 							.prod__img
-								img(src='/img/product-full.png' alt='')
+								img(src='img/product-full.png' alt='')
 							.prod__info
 								+back()
 								h2.page__title.prod__title БМВЛ для телят АСТ/105
@@ -37,7 +37,7 @@ block pageMain
 								.prod__file
 									.prod__file-icon
 										svg.svg
-											use(xlink:href='/img/svgSprite.svg#icon__pdf_download')
+											use(xlink:href='img/svgSprite.svg#icon__pdf_download')
 									.prod__file-inner
 										.prod__file-title Иструкция по применению
 										.prod__file-row
