--- a/dev/blocks/popup/popup.pug
+++ b/dev/blocks/popup/popup.pug
@@ -5,7 +5,7 @@ mixin popup-vacancy()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Отправить резюме
 			.popup__descr Если вам понравилась наша вакансия, вы подходите под эти критерии или у вас есть желание попробовать силы, откликнитесь на неё
 			form.form.popup__form(id='upload')
@@ -33,7 +33,7 @@ mixin popup-call()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Заказать звонок
 			.popup__descr Вы можете заказать звонок на Ваш телефон через данную форму. Укажите в соответствующих полях Ваши контактные данные и наш сотрудник перезвонит Вам.
 			form.form.popup__form
@@ -52,12 +52,12 @@ mixin popup-price()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Узнать цену
 			.popup__descr Вы можете заказать звонок на Ваш телефон через данную форму. Укажите в соответствующих полях Ваши контактные данные и наш сотрудник перезвонит Вам.
 			.popup__product
 				.popup__product-img
-					img(src='/img/popup-good.png' alt='')
+					img(src='img/popup-good.png' alt='')
 				.popup__product-inner
 					.popup__product-title БМВЛ для телят АСТ/105
 					.popup__product-descr витаминно-минеральный коктейль для добавления в цельное молоко
@@ -76,7 +76,7 @@ mixin popup-audit()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Заказать аудит
 			//-.popup__descr Если вам понравилась наша вакансия, вы подходите под эти критерии или у вас есть желание попробовать силы, откликнитесь на неё
 			form.form.popup__form(id='upload')
@@ -94,7 +94,7 @@ mixin popup-diet()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Заказать расчёт рациона
 			form.form.popup__form(id='upload')
 				.form__grid
@@ -111,7 +111,7 @@ mixin popup-lab()
 		.popup__inner
 			.popup__close.mfp-close
 				svg.popup__icon.svg
-					use(xlink:href='/img/svgSprite.svg#icon__cross')
+					use(xlink:href='img/svgSprite.svg#icon__cross')
 			.popup__title Заказать анализ
 			form.form.popup__form(id='upload')
 				.form__grid
