--- a/dev/blocks/prod-tiles/prod-tiles.pug
+++ b/dev/blocks/prod-tiles/prod-tiles.pug
@@ -11,4 +11,4 @@ mixin prod-tiles(items)
 					span
 				.prod-tiles__img
 					svg.svg
-						use(xlink:href='/img/svgSprite.svg#img__' + item.img)
+						use(xlink:href='img/svgSprite.svg#img__' + item.img)
