--- a/dev/pug/layout__part_nav.pug
+++ b/dev/pug/layout__part_nav.pug
@@ -5,7 +5,7 @@
 			.sidenav__phones
 				.phone-drop__img
 					svg.phone-drop__icon.svg
-						use(xlink:href='/img/svgSprite.svg#icon__phone')
+						use(xlink:href='img/svgSprite.svg#icon__phone')
 				.sidenav__links
 					a.sidenav__link(href='tel:88432788654') +7 843 278 86 54
 					a.sidenav__link(href='tel:89673683323') +7 967 36 83 323
