--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -6,6 +6,8 @@ include mixins.pug
 doctype html
 html(class='no-js', lang='ru-RU')
 	head
+		if deploy === true
+			base(href='https://motosasha.github.io/agrostar/')
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1')
 		meta(http-equiv='X-UA-Compatible', content='ie=edge')
@@ -18,22 +20,22 @@ html(class='no-js', lang='ru-RU')
 		meta(name='robots', content='index, follow')
 		meta(name='theme-color', content='#4671a2')
 
-		link(rel="apple-touch-icon", sizes="57x57", href="/img/favicon/apple-icon-57x57.png")
-		link(rel="apple-touch-icon", sizes="60x60", href="/img/favicon/apple-icon-60x60.png")
-		link(rel="apple-touch-icon", sizes="72x72", href="/img/favicon/apple-icon-72x72.png")
-		link(rel="apple-touch-icon", sizes="76x76", href="/img/favicon/apple-icon-76x76.png")
-		link(rel="apple-touch-icon", sizes="114x114", href="/img/favicon/apple-icon-114x114.png")
-		link(rel="apple-touch-icon", sizes="120x120", href="/img/favicon/apple-icon-120x120.png")
-		link(rel="apple-touch-icon", sizes="144x144", href="/img/favicon/apple-icon-144x144.png")
-		link(rel="apple-touch-icon", sizes="152x152", href="/img/favicon/apple-icon-152x152.png")
-		link(el="apple-touch-icon", sizes="180x180", href="/img/favicon/apple-icon-180x180.png")
-		link(rel="icon", type="image/png", sizes="228x228", href="/img/favicon/favicon-228x228.png")
-		link(rel="icon", type="image/png", sizes="32x32", href="/img/favicon/favicon-32x32.png")
-		link(rel="icon", type="image/png", sizes="96x96", href="/img/favicon/favicon-96x96.png")
-		link(rel="icon", type="image/png", sizes="16x16", href="/img/favicon/favicon-16x16.png")
-		link(rel="manifest", href="/img/favicon/manifest.json")
+		link(rel="apple-touch-icon", sizes="57x57", href="img/favicon/apple-icon-57x57.png")
+		link(rel="apple-touch-icon", sizes="60x60", href="img/favicon/apple-icon-60x60.png")
+		link(rel="apple-touch-icon", sizes="72x72", href="img/favicon/apple-icon-72x72.png")
+		link(rel="apple-touch-icon", sizes="76x76", href="img/favicon/apple-icon-76x76.png")
+		link(rel="apple-touch-icon", sizes="114x114", href="img/favicon/apple-icon-114x114.png")
+		link(rel="apple-touch-icon", sizes="120x120", href="img/favicon/apple-icon-120x120.png")
+		link(rel="apple-touch-icon", sizes="144x144", href="img/favicon/apple-icon-144x144.png")
+		link(rel="apple-touch-icon", sizes="152x152", href="img/favicon/apple-icon-152x152.png")
+		link(el="apple-touch-icon", sizes="180x180", href="img/favicon/apple-icon-180x180.png")
+		link(rel="icon", type="image/png", sizes="228x228", href="img/favicon/favicon-228x228.png")
+		link(rel="icon", type="image/png", sizes="32x32", href="img/favicon/favicon-32x32.png")
+		link(rel="icon", type="image/png", sizes="96x96", href="img/favicon/favicon-96x96.png")
+		link(rel="icon", type="image/png", sizes="16x16", href="img/favicon/favicon-16x16.png")
+		link(rel="manifest", href="img/favicon/manifest.json")
 		meta(name="msapplication-TileColor", content="#ffffff")
-		meta(name="msapplication-TileImage", content="/img/favicon/ms-icon-144x144.png")
+		meta(name="msapplication-TileImage", content="img/favicon/ms-icon-144x144.png")
 		meta(name="theme-color", content="#ffffff")
 
 		link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet")
@@ -45,9 +47,9 @@ html(class='no-js', lang='ru-RU')
 			meta(name='keywords', content='')
 
 		block head
-			link(rel="stylesheet" href="/css/style.css")
+			link(rel="stylesheet" href="css/style.css")
 			//-удалить:
-			//-link(rel="stylesheet" href="/css/trash.css")
+			//-link(rel="stylesheet" href="css/trash.css")
 
 	body
 		noscript У вас отключен JavaScript. Это пугает.
@@ -67,8 +69,8 @@ html(class='no-js', lang='ru-RU')
 	+popup-call
 	block templates
 
-	script(src='/js/main.js')
+	script(src='js/main.js')
 	//-удалить
-	//-script(src="/js/service.js")
+	//-script(src="js/service.js")
 
 	block scripts
