~ pathes pages test

--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -15,7 +15,7 @@ block pageMain
 					.welcome__info
 						h1.welcome__title Продажа кормов для сельскохоз животных
 						.welcome__descr Наши продукты позволяют оптимальным образом сбалансировать рацион, по питательным веществам, энергии и микроэлементам.
-						a.welcome__button.button(href= pageAddress + '/production.html') Продукция
+						a.welcome__button.button(href= pageAddress + 'production.html') Продукция
 	section.section
 		.grid
 			.grid__row
