--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -1,6 +1,6 @@
 //- Стандартный шаблон страницы
 
-if deploy === true
+if ghPgs === true
 	- var pageAddress = '/agrostar';
 else
 	- var pageAddress = '/';
@@ -12,7 +12,7 @@ include mixins.pug
 doctype html
 html(class='no-js', lang='ru-RU')
 	head
-		if deploy === true
+		if ghPgs === true
 			base(href='https://motosasha.github.io/agrostar/')
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1')
