--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -13,7 +13,7 @@ mixin header(title)
 								svg.svg
 									use(xlink:href='img/svgSprite.svg#logo_as_new')
 						else
-							a.header__logo(href='/')
+							a.header__logo(href= pageAddress + '/')
 								svg.svg
 									use(xlink:href='img/svgSprite.svg#logo_as_new')
 						a.header__call(href='tel:88432788654')
@@ -25,7 +25,7 @@ mixin header(title)
 								svg.svg
 									use(xlink:href='img/svgSprite.svg#logo_as_new')
 						else
-							a.header__logo(href='/')
+							a.header__logo(href= pageAddress + '/')
 								svg.svg
 									use(xlink:href='img/svgSprite.svg#logo_as_new')
 						.header__nav
