--- a/dev/blocks/prod-tiles/prod-tiles.pug
+++ b/dev/blocks/prod-tiles/prod-tiles.pug
@@ -3,7 +3,7 @@
 mixin prod-tiles(items)
 	.prod-tiles(class=isMainPage ? 'prod-tiles_main-page': '')
 		each item, index in items
-			a.prod-tiles__item(class='prod-tiles__item_' + item.class, href='/production-list.html')
+			a.prod-tiles__item(class='prod-tiles__item_' + item.class, href= pageAddress + '/production-list.html')
 				.prod-tiles__title!= item.title
 				if item.isDescr === true
 					.prod-tiles__descr!= item.descr
