--- a/dev/blocks/subheader/subheader.pug
+++ b/dev/blocks/subheader/subheader.pug
@@ -7,7 +7,7 @@ mixin subheader(title, isSub, sub)
 				.grid__col
 					.subheader__block
 						.breadcrumbs
-							a.breadcrumbs__item(href='/') Главная
+							a.breadcrumbs__item(href= pageAddress + '/') Главная
 						h1.subheader__heading!= title
 						if isSub === true
 							.subheader__subnav
