--- a/dev/pages/404.pug
+++ b/dev/pages/404.pug
@@ -16,4 +16,7 @@ block pageMain
 			.grid__row
 				.grid__col
 					h2.page__title.page__title_1 Ошибка 404
-					p.page__p Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на <a href='/' class='link'>главную страницу</a>.
+					p.page__p
+						| Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на
+						|
+						a.link(href=pageAddress + '/') главную страницу
