--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -149,7 +149,7 @@ block pageMain
 							.slider__slide
 								.slider__lab
 									svg.slider__lab-icon.svg
-										use(xlink:href='/img/svgSprite.svg#icon__comb')
+										use(xlink:href='img/svgSprite.svg#icon__comb')
 									.slider__lab-inner
 										.slider__lab-title Лаборатория оснащена современным испытательным оборудованием ведущих мировых производителей
 										ul.slider__lab-list
