--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -1,4 +1,11 @@
 //- Стандартный шаблон страницы
+- var isDeploy = false
+
+if isDeploy === true
+	- var pageAddress = '/agrostar'
+else
+	- var pageAddress = ''
+
 block variables
 	- var isMainPage = false;
 include mixins.pug
@@ -6,7 +13,7 @@ include mixins.pug
 doctype html
 html(class='no-js', lang='ru-RU')
 	head
-		if deploy === true
+		if isDeploy === true
 			base(href='https://motosasha.github.io/agrostar/')
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1')
