--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -15,7 +15,7 @@ block pageMain
 					.welcome__info
 						h1.welcome__title Продажа кормов для сельскохоз животных
 						.welcome__descr Наши продукты позволяют оптимальным образом сбалансировать рацион, по питательным веществам, энергии и микроэлементам.
-						a.welcome__button.button(href='/production.html') Продукция
+						a.welcome__button.button(href= pageAddress + '/production.html') Продукция
 	section.section
 		.grid
 			.grid__row
@@ -100,5 +100,5 @@ block pageMain
 					.slider-side
 						h2.page__title.page__title_1 О компании
 						p.slider-side__p Компания АгроСтар производитель и поставщик высококачественных продуктов и кормовых добавок для молочного животноводства. Нашей приоритетной задачей является внедрение передовых технологий кормления повышающих экономическую эффективность молочного хозяйства.
-						a.slider-side__button.button(href='/about.html') Подробнее
+						a.slider-side__button.button(href= pageAddress + '/about.html') Подробнее
 
