~ css pathes fix

--- a/dev/blocks/reviews/reviews.scss
+++ b/dev/blocks/reviews/reviews.scss
@@ -41,7 +41,7 @@
 		position: relative;
 		width: 200px;
 		&::before {
-			background: url("../img/icon__zoom.png") center no-repeat, rgba(30,61,104,0);
+			background: url("/img/icon__zoom.png") center no-repeat, rgba(30,61,104,0);
 			content: '';
 			display: block;
 			height: 100%;
@@ -50,7 +50,7 @@
 			width: 100%;
 		}
 		&:hover::before {
-			background: url("../img/icon__zoom.png") center no-repeat, rgba(30,61,104,.05);
+			background: url("/img/icon__zoom.png") center no-repeat, rgba(30,61,104,.05);
 		}
 		@media (min-width: $screen-xl) {
 			width: auto;
