--- a/dev/blocks/welcome/welcome.scss
+++ b/dev/blocks/welcome/welcome.scss
@@ -20,8 +20,8 @@
 		display: none;
 		left: 50%;
 		height: 975px;
-		mask-image: url(../img/img__welcome-mask.svg);
--webkit-mask-image: url(../img/img__welcome-mask.svg);
+		mask-image: url(/img/img__welcome-mask.svg);
+-webkit-mask-image: url(/img/img__welcome-mask.svg);
 		object-fit: cover;
 		position: absolute;
 		top: 0;
