~ js pathes fix

--- a/dev/pages/contacts.pug
+++ b/dev/pages/contacts.pug
@@ -13,14 +13,14 @@ block pageMain
 						.contacts__item
 							.contacts__icon
 								svg.vacancy-apply__icon.svg
-									use(xlink:href='img/svgSprite.svg#icon__company')
+									use(xlink:href='/img/svgSprite.svg#icon__company')
 							.contacts__info
 								.contacts__title Компания:
 								.contacts__line ООО «АгроСтар-Трейд+»
 						.contacts__item
 							.contacts__icon
 								svg.vacancy-apply__icon.svg
-									use(xlink:href='img/svgSprite.svg#icon__phone')
+									use(xlink:href='/img/svgSprite.svg#icon__phone')
 							.contacts__info
 								.contacts__title Телефоны:
 								a(href='tel:88432788654').contacts__phone +7 843 278 86 54
@@ -28,14 +28,14 @@ block pageMain
 						.contacts__item
 							.contacts__icon
 								svg.vacancy-apply__icon.svg
-									use(xlink:href='img/svgSprite.svg#icon__mail')
+									use(xlink:href='/img/svgSprite.svg#icon__mail')
 							.contacts__info
 								.contacts__title Пишите нам:
 								a(href='mailto:servisagro2@gmail.com').contacts__mail servisagro2@gmail.com
 						.contacts__item
 							.contacts__icon
 								svg.vacancy-apply__icon.svg
-									use(xlink:href='img/svgSprite.svg#icon__compass')
+									use(xlink:href='/img/svgSprite.svg#icon__compass')
 							.contacts__info
 								.contacts__title Заходите в гости:
 								address.contacts__address.
@@ -45,7 +45,7 @@ block pageMain
 			//-.map-marker
 				.map-marker__icon
 					svg.svg
-						use(xlink:href='img/svgSprite.svg#icon__pin')
+						use(xlink:href='/img/svgSprite.svg#icon__pin')
 				.map-marker__title Мы находимся тут
 
 				a(class="dg-widget-link", href="http://2gis.ru/kazan/firm/2956015536780124/center/49.127821,55.722249/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap") Посмотреть на карте Казани
