--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -37,7 +37,7 @@ block pageMain
 								.prod__file
 									.prod__file-icon
 										svg.svg
-											use(xlink:href='img/svgSprite.svg#icon__pdf_download')
+											use(xlink:href='/img/svgSprite.svg#icon__pdf_download')
 									.prod__file-inner
 										.prod__file-title Иструкция по применению
 										.prod__file-row
