--- a/dev/pages/audit.pug
+++ b/dev/pages/audit.pug
@@ -24,6 +24,9 @@ block pageMain
 					h2.page__title.page__title_1 Аудит молочной фермы — объективная и независимая экспертная оценка
 						br
 						| Профессиональный и независимый взгляд на проблемы в хозяйстве.
+					.video.video_article
+						.video__inner
+							iframe(src='https://www.youtube.com/embed/9WkDZ95XToM' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 					p.page__p Независимый аудит — лучший способ выявить проблемы, которые не дают хозяйству работать с высокой эффективностью. Мы проводим комплексный аудит молочной фермы и анализируем все выявленные проблемы. С нашей помощью клиент сможет выявить факторы, которые оказывают негативное влияние на эффективность и экономику хозяйства. Все консультанты компании являются высококвалифицированными экспертами, которые готовы провести:
 						br
 						br
